Fix keyboard focus of RWHVQDW after popup

Task-number: QTBUG-56652
Change-Id: I1a6655587a9104dd817332e2eb5f886c057d8f64
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>